--- a/views/products/mukuta9plus.ejs
+++ b/views/products/mukuta9plus.ejs
@@ -1,5 +1,5 @@
 <% layout('layouts/boilerplate.ejs') %>
-    <h1 style="text-align: center;">MUKUTA 9 PLUS ELECTRIC SCOOTER</h1>
+    <h1 style="text-align: center; font-weight: 900;">MUKUTA 9 PLUS ELECTRIC SCOOTER</h1>
 
     <!-- Carousel and Description table -->
     <div class="container product-details-first-section">
@@ -58,7 +58,7 @@
             <div class="col col-md-6 " id="product-details-section-one-b">
 
                 <section class="product-details-description">
-                    <p class="product-name"> MUKUTA 9 PLUS ELECTRIC SCOOTER
+                    <p class="product-name"> Overview
 
                     </p>
                     <p class="product-description">
@@ -127,11 +127,163 @@
     </div>
 
 
-    <!-- Testing icons for features from maxblinker -->
-    <!-- <section style="background-color: white; display: flex; justify-content: center;">
-        <img src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696143196/VetStore/products-lists/mukuta9plus/mukuta-icons-description_zyyd3c.png"
-            alt="">
-    </section> -->
+    <div class="container product-details-title">
+        <h5>ALL IMPORTANT</h5>
+        <h1>Product Information</h1>
+    </div>
+
+    <!-- Product details -->
+    <section class="container product-details-individual-details">
+        <section class="container overview" >
+            <div class="title">
+                <h1>Overview</h1>
+            </div>
+            <div class="content">
+                <div class="text">
+                    <p>Although it is a road scooter by nature, it is fitted with equipment allowing riders to venture out to easy terrain without worries. There are only a few <span>9-inch machines </span> on the market that combine a comparable variability of focus with modern and premium equipment features. This is the story of the new model Mukuta 9 Plus which, unlike the standard 9 version, <span>doubles the power to 1600 W</span>. It differs from the basic model by having two motors, off-road tires and eye-catching, gold-black finish. It also comes with torsion suspension, a number of safety features, as well as the ability to ride fast and over long distances. After all, <span></span> speak for themselves.</p>
+                </div>
+                <div class="image">
+                    <img src="https://www.maxblinker.com/img/cms/Produkty/Mukuta-9-plus/mukuta-9-pls-1-min.png" alt="">
+                </div>
+            </div>
+
+
+            
+        </section>
+
+        <section class="container power-and-range " >
+                <div class="title">
+                    <h1>Power and Range</h1>
+                </div>
+                <div class="content">
+                    <div class="image">
+                        <img src="https://www.maxblinker.com/img/cms/Produkty/Mukuta-9-plus/mukuta-9-pls-2-min.png" alt="">
+                    </div>
+                    <div class="text">
+                        <p>Despite having a wheel size that rather classifies it as an urban scooter, the <span>Mukuta 9 Plus</span> easily proves that it can do much more than that. How? Thanks to a duo of brushless motors providing a combined <span>output of 1600 W</span>. Which is why it conquers hills with an inclination of 25° without the slightest problem. After turning half the handle, like on a motorcycle, the Mukuta 9 Plus starts accelerating on a flat surface to its top speed of 48 km/h.</p>
+                        
+                        <p>The dual 48 V, 24 A controller of the Mukuta 9 Plus makes sure that you can leave the main road for dusty paths without having to worry about losing power. However, this power must be adequately supplied with energy, which is the task of the 48 V Li-ion LG battery providing a <span> capacity of 15.6 Ah and an energy of 835 Wh</span>. In normal conditions, the battery capacity lasts for 70 km long rides. The LG battery is unique by its easy-to-swap option. There is a handle right in the deck and, after releasing the holders, this battery can be easily removed and replaced with a fully charged one. Naturally, you can charge the battery in a standard manner via two ports located on the top of the deck and it takes <span>8.5 hours</span> to fully charge when using one charger or 4.5 hours with two chargers.</p>
+
+                    </div>
+
+                </div>
+
+
+        </section>
+
+        <section class="container body-design-equipment" >
+            <div class="title">
+                <h1>Body, design and equipment</h1>
+            </div>
+            <div class="content">
+                <div class="text">
+                    <p>
+                        The versatility of the Mukuta 9 Plus is mostly thanks to its <span>frame made of aviation-grade aluminum</span> that improves the scooter's stiffness and durability. The deck forms the largest part of the scooter body, being terminated by a raised rear section. As a proper scooter for all types of roads, the deck is sufficiently <span>wide and covered with an anti-skid mat</span>. The frame continues through the steering rod's neck towards the patented folding stem. It feels robust, which is why <span>you won't feel any swaying of the steering rod</span> even when riding off the road. To fold it, just loosen the single lever and attach the folded handlebars to the raised part of the deck.
+                    </p>
+                    <p>
+                        The top of the steering column is dominated by <span>67.5 cm wide folding handlebars</span>. At their very center there is a <span>4.5-inch LCD panel</span> showing all riding data and graphically well-arranged setting options. To “start” the scooter, simply <span>place the NFC chip</span> close to the top of the display. Your left hand controls the motor switch, allowing you to ride in eco mode with a single active motor or use a <span>combined full power of both motors</span>. The uniqueness of the Mukuta 9 Plus is further underscored by its color design. The combination of black and golden color emphasises the fact that you are riding a truly extraordinary scooter.
+                    </p>
+                </div>
+                <div class="image">
+                    <img src="https://www.maxblinker.com/img/cms/Produkty/Mukuta-9-plus/mukuta-9-pls-6-min.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="container safety-and-comfort" >
+            <div class="title">
+                <h1>Safety and comfort
+                </h1>
+            </div>
+            <div class="content">
+                <div class="image">
+                    <img src="https://www.voltride.sk/img/cms/Produkty/Mukuta-9-plus/mukuta-9-pls-5-min.png" alt="">
+                </div>
+                <div class="text">
+                    <p>The Mukuta 9 Plus provides its new owners and riders with a truly comfortable and worry-free riding experience. It comes with <span> multiple equipment and design elements</span> that simply evoke this feeling. One of these elements is the torsion suspension at the front and the rear with <span>adjustable stiffness</span>. Along with 9-inch inflatable tubeless tires, they provide for an extremely comfortable ride at all times. Moreover, the tires come with an <span>off-road tread and enhanced puncture protection</span>. The brakes do not fall behind either, as in this case the manufacturer opted for a combination of an electronic and a <span>145 mm hydraulic brake</span> at the front and rear with a completely closed system for immediate response in all conditions.</p>
+                    <p>The manufacturer also thought of <span>riding safety in poor visibility</span>, which is why the scooter comes with a front LED headlight, as well as <span>LED strips</span> on the sides of the deck serving not only as an ambient element but also as <span>turn signals</span> further enhancing not only your safety but the safety of other road users as well. The rear brake light completes the scooter’s lighting equipment.
+
+                    </p>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="container use-and-practicality" >
+            <div class="title">
+                <h1>Use and practicality</h1>
+            </div>
+            <div class="content">
+                <div class="text">
+                    <p>The agile geometry with <span> 9-inch wheels</span>, modern and safe equipment along with two motors all predestine the Mukuta 9 Plus not just for the city but for a truly versatile use. Thanks to its <span>torsion suspension, tubeless tires with off-road tread and hydraulic brakes</span>, riding this scooter on any surface will be a genuine experience. The only downside in everyday use are the scooter's weight and dimensions. The <span>weight of 33.5 kg and dimensions of 126 x 54 x 21 cm (length, height, width)</span> after folding the scooter are not among the best values in this category. Therefore, carrying the scooter to the elevator or loading it into a car trunk will not be among your favorite activities.</p>
+                </div>
+                <div class="image">
+                    <img src="https://www.maxblinker.com/img/cms/Produkty/Mukuta-9-plus/mukuta-9-pls-4-min.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="container our-rating" >
+            <div class="title">
+                <h1>Our rating</h1>
+            </div>
+            <div class="content">
+                <div class="image">
+                    <img src="https://www.maxblinker.com/img/cms/Produkty/Mukuta-9-plus/mukuta-9-pls-3-min.png" alt="">
+                </div>
+                <div class="text">
+                    <p>
+                        The Mukuta 9 Plus combines the best of two worlds and enjoys a unique position on the market. There are just a few electric scooters in the 9-inch wheel category that <span>boast equipment, dimensions and riding specs</span> matching their larger competitors. That is why the Mukuta 9 Plus is able to keep pace with <span>both urban models and off-road scooters</span>. This model will satisfy all those who do not want to make compromises between a city scooter and an off-road machine. With its practical gadgets, technical specifications and build quality, the Mukuta 9 Plus pleases a wide spectrum of riders. Thanks to having <span>two motors, riding it will give you a big rush of adrenaline</span>. If you are looking for a versatile scooter without compromises, the Mukuta 9 Plus is here for you.
+
+
+                    </p>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="container service" >
+            <div class="title">
+                <h1>Service</h1>
+            </div>
+            <div class="content">
+                <div class="text">
+                    <p>We are a dealer of the Mukuta brand for the whole of Central Europe. We offer warranty and post-warranty servicing, which is provided at our service center. We keep spare parts in stock or we can obtain them quickly from the manufacturer. Therefore, when buying this scooter, you do not have to worry about service or unavailability of spare parts. Being able to contact the manufacturer directly, we can handle difficult repairs or diagnostics.
+
+                    </p>
+                </div>
+                <div class="image">
+                    <img id="brand" src="https://www.maxblinker.com/img/cms/znacky/Mukuta/mukuta-logo.jpg" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="container about-the-brand" >
+            <div class="title">
+                <h1>About the brand</h1>
+            </div>
+            <div class="content">
+                <div class="image">
+                    <img  src="https://www.maxblinker.com/img/cms/znacky/Mukuta/mukuta-company-2.jpg" alt="">
+                </div>
+                <div class="text">
+                    <p>Although the Mukuta brand itself is a newcomer to the electric scooter market, the engineers behind this brand are anything but beginners. <span>The Mukuta scooters are made on the same production line as the world-famous Vsett and Zero scooters</span>. In the Mukuta models, the manufacturer combines all the previous experience gained by these brands and brings to the market scooters intended for the most demanding users. The Mukuta models therefore dominate by high-quality and durable design, modern equipment and sporting performance. Since <span>Vet Scooter is a leader in offering the Vsett and Zero scooters</span>, the Mukuta brand cannot be the exception. That is why you can rely on us when it comes to quality warranty and post-warranty service, as well as support, advice and spare parts.</p>
+                </div>
+
+            </div>
+        </section>
+
+
+
+
+
+
+
+
+    </section>
+
+
+
 
 
     <!-- Write a review button to open form modal -->
